<resources>
    <string name="app_name">Basis Theory Demo</string>

    <string name="title_card">Collect Cards</string>
    <string name="title_token_intent">Token Intents</string>
    <string name="title_social_security_number">Collect SSNs</string>
    <string name="title_custom_form">Custom Forms</string>
    <string name="title_virtual_card">Virtual Card</string>
    <string name="title_reveal">Reveal Data</string>
    <string name="title_styling">Custom Styling</string>
    <string name="title_raw_proxy_response">Raw Proxy Response</string>
    <string name="title_dual_write">HTTP client</string>
    <string name="title_encrypt_token">Encrypt Token</string>


    <string name="autofill">Autofill</string>
    <string name="tokenize">Tokenize</string>
    <string name="create_token_intent">Create Token Intent</string>
    <string name="invoke_proxy">Invoke Proxy</string>
    <string name="reveal">Reveal</string>
    <string name="tokenize_error">Error during tokenization: %1$s</string>
    <string name="create_token_intent_error">Error creating token intent: %1$s</string>
    <string name="proxy_error">Error executing proxy: %1$s</string>
    <string name="get_token_error">Error retrieving token: %1$s</string>
    <string name="encrypt_token_error">Error encrypting token: %1$s</string>
    <string name="reset">Reset</string>
    <string name="style1">Style 1</string>
    <string name="style2">Style 2</string>
    <string name="name">Name</string>
    <string name="social_security_number">Social Security Number</string>
    <string name="card_number">Card Number</string>
    <string name="select_brand">Select Brand</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvc">CVC</string>
    <string name="revealed_card_number">Revealed Card Number</string>
    <string name="revealed_expiration_date">Revealed Expiration Date</string>
    <string name="revealed_cvc">Revealed CVC</string>
    <string name="order_number">Order Number</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="pin">PIN</string>



    <string name="post">POST</string>
    <string name="get">GET</string>
    <string name="delete">DELETE</string>
    <string name="patch">PATCH</string>
    <string name="put">PUT</string>
</resources>