<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_card"
            android:title="@string/title_card" />
        <item
            android:id="@+id/nav_token_intent"
            android:title="@string/title_token_intent" />
        <item
            android:id="@+id/nav_social_security_number"
            android:title="@string/title_social_security_number" />
        <item
            android:id="@+id/nav_custom_form"
            android:title="@string/title_custom_form" />
        <item
            android:id="@+id/nav_virtual_card"
            android:title="@string/title_virtual_card" />

        <item
            android:id="@+id/nav_reveal"
            android:title="@string/title_reveal" />

        <item
            android:id="@+id/nav_styling"
            android:title="@string/title_styling" />

        <item
            android:id="@+id/nav_raw_proxy_response"
            android:title="@string/title_raw_proxy_response" />

        <item
...
