<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.basistheory.elements.example.view.card.CardFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/virtual_card_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/virtual_card"
                    android:minHeight="55dp"
                    android:padding="20dp">

                    <com.basistheory.elements.view.TextElement
                        android:id="@+id/readonly_card_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="40dp"
                        android:text="0000 0000 0000 0000"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:enabled="false" />

                    <com.basistheory.elements.view.TextElement
                        android:id="@+id/readonly_expiration_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:text="**/**"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:enabled="false" />

                </LinearLayout>

                <com.basistheory.elements.view.CardNumberElement
                    android:id="@+id/card_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text"
                    android:padding="5dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/card_number"
                    android:textColor="@color/gray_800" />

                <com.basistheory.elements.view.CardExpirationDateElement
                    android:id="@+id/expiration_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_edit_text"
                    android:padding="5dp"
                    android:hint="@string/expiration_date"
                    android:textColor="@color/gray_800" />

                <com.basistheory.elements.view.CardVerificationCodeElement
                    android:id="@+id/cvc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_edit_text"
                    android:padding="5dp"
                    android:hint="@string/cvc"
                    android:textColor="@color/gray_800" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
